# podcast-this

./: .gitignore  LICENSE  README.md
cli/: pyproject.toml
cli/podcast/: __init__.py  artifact_store.py  episode_store.py  feed.py  job_store.py  main.py  models.py  pipeline.py  rewrite.py  service.py  spindle_client.py  stitch.py
cli/podcast/sources/: __init__.py  base.py  markdown.py
cli/podcast/tts/: __init__.py  _util.py  base.py  f5.py  kokoro.py  openai.py
cli/tests/: test_service.py
jobs/: 1edffc27-127b-4353-84c5-7e99cb8b1140.json
prompts/: rewrite-section.md
server/: Caddyfile
