[project]
name = "podcast-this"
version = "0.1.0"
description = "Convert documents into narrated podcast episodes via Spindle."
readme = "../README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "saarang" }]
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "mutagen>=1.47",   # ID3v2 chapter markers
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
podcast = "podcast.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["podcast"]
